# webgme-transformations

./: .gitignore  .npmignore  Cargo.toml  README.md  app.cjs  deno.json  package-lock.json  package.json  rollup.config.mjs  todo.md  transformation_meta.json  tsconfig.json  viz-transform.md  webgme-setup.json
.github/workflows/: CI.yml  format.yml  npm-publish.yml  test.yml
config/: config.default.js  config.test.js  config.webgme.js
crates/engine/: Cargo.toml
crates/engine-js/: .gitignore  Cargo.toml  index.js  package-lock.json  package.json  webpack.config.js
crates/engine-js/src/: lib.rs
crates/engine/src/: assignment.rs  core.rs  error.rs  gme.rs  lib.rs  main.rs  pattern.rs
dev/bench/: data.js
js/: README.md  package-lock.json  package.json  webgme-setup.json
js/config/: config.webgme.js
misc/: cyto-example.json  cytoscape.json
playground/: package-lock.json  package.json
playground/src/: app.html
src/: assignment.rs  core.rs  gme.rs  lib.rs  main.rs  pattern.rs
src/common/: ModelTransformation.js  ModelTransformation.ts  README.md  TransformationObserver.js  TransformationObserver.ts  index.js  index.ts  types.d.ts
src/engine/: Cargo.toml  package-lock.json
src/engine/crates/cli/: Cargo.toml
src/engine/crates/cli/src/: main.rs  utils.rs
src/engine/crates/engine/: Cargo.toml
src/engine/crates/engine/benches/: attr-active-node.rs
src/engine/crates/engine/src/: assignment.rs  error.rs  gme.rs  lib.rs  pattern.rs
test/: globals.js  globals.ts
test/common/: ModelTransformation.spec.js  ModelTransformation.spec.ts
(+18 files in other folders)
