[package]
name = "gme-pattern-cli"
version = "0.1.0"
edition = "2021"
authors = ["Brian Broll <brian.broll@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webgme-pattern-engine = { path = "../engine", version = "0.1.0" }
serde = { version = "1.0.137", features = ["derive"] }
clap = { version = "3.0.13", features = ["derive"] }
serde_json = "1.0.96"
